Quorum/Library/Tests/Templating/Pass/TempClassHasATempClass_8.quorum
class Main
    action Main
        LinkedList<integer> intList
        intList:addAtEnd(5)
        intList:addAtEnd(17)
        intList:addAtEnd(35)

        intList:removeAtPosition(2) // remove 17 from list

        integer i = intList:getAtPosition(1) // i should equal 5
        integer j = intList:getAtPosition(2) // j should equal 35
        output i
        output j
    end
end