Quorum/Library/Tests/Templating/Fail/PrimitiveGenericMain.quorum
class Main
    action Main
        Generic<integer> values
        integer value = values:GetValue()
        output value
    end
end